--- a/index.html
+++ b/index.html
@@ -26,12 +26,19 @@
         headers: { "Content-Type": "application/json" }
       });
       const data = await res.json();
-      const links = data.results.split('\n').filter(line => line.trim());
-      resultsDiv.innerHTML = links.map(line => {
-        const match = line.match(/\[Link \d+\]\((.*?)\)/);
-        const desc = line.split(' - ')[1];
-        return `<a href="${match[1]}" target="_blank">${desc}</a>`;
-      }).join('');
+      resultsDiv.innerHTML = "";
+if (data.length === 0) {
+  resultsDiv.innerHTML = "<p>No matches found.</p>";
+} else {
+  data.forEach(item => {
+    const link = document.createElement("a");
+    link.href = item.url;
+    link.textContent = item.description;
+    link.target = "_blank";
+    resultsDiv.appendChild(link);
+    resultsDiv.appendChild(document.createElement("br"));
+  });
+}
     }
   </script>
 </body>
