--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     resultsDiv.innerHTML = "Searching...";
     
     try {
-      const res = await fetch("https://script.google.com/macros/s/AKfycbxTL8u05BSlTyoNp9YjYo9ZjyRfHg1QNDc34bdHpZNJwzql1DLgDVvRLJaNUC24UrTB/exec", {
+      const res = await fetch("https://script.google.com/a/macros/iimamritsar.ac.in/s/AKfycbxTL8u05BSlTyoNp9YjYo9ZjyRfHg1QNDc34bdHpZNJwzql1DLgDVvRLJaNUC24UrTB/exec", {
         method: "POST",
         body: JSON.stringify({ query }),
         headers: { "Content-Type": "application/json" }
